--- a/index.html
+++ b/index.html
@@ -1,18 +1,35 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Code Challenge 1</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <div class="wrapper">
     <!-- HEADER -->
+    <h1>Welcome to Riyadh</h1>
     <!-- SUB HEAD -->
-
+    <h2>Where A Traditional Past Meets A Modern Future.</h2>
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
+      <img src="./images/transportation/transit.jpg" alt="Modern Transit">
+      <h3>Travel</h3>
+      <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh"><p>Once a mudbrick waystation</p></a>
+      
+     
+
+      <img src="./images/garden.jpg" alt="Riyadh Garden">
+      <h3>History</h3>
+      <a href="http://en.wikipedia.org/wiki/Riyadh"><p>Riyadh</p></a>
+
+      <img src="./images/transportation/camels-in-truck.jpg" alt="The roads of Riyadh">
+      <h3>Sources</h3>
+      <p>The city is divided into 15 municipal districts</p>
     </div>
   </div>
 </body>
+
 </html>
